--- a/index.html
+++ b/index.html
@@ -57,73 +57,73 @@
                 </a>
             </div>
             <div class="nav-item">
-                <a href="#" class="deploy-nav-sub-item">
+                <a href="bouquet.html" class="deploy-nav-sub-item">
                     <i class="nav-icon fa fa-cog"></i>
                     Il Bouquet
                 </a>
             </div>
             <div class="nav-item">
-                <a href="#" class="deploy-nav-sub-item">
-                    <i class="nav-icon fa fa-camera"></i>
-                    La Giarrettiera
-                </a>
-            </div>
-            <div class="nav-item">
-                <a href="#" class="deploy-nav-sub-item">
-                    <i class="nav-icon fa fa-picture-o"></i>
-                    Prima del Matrimonio
-                </a>
-            </div>
-            <div class="nav-item">
-                <a href="#" class="deploy-nav-sub-item">
-                    <i class="nav-icon fa fa-files-o"></i>
-                    Dopo la Cerimonia
-                </a>
-            </div>
-            <div class="nav-item">
-                <a href="#" class="deploy-nav-sub-item">
-                    <i class="nav-icon fa fa-files-o"></i>
-                    Il Giorno adatto
-                </a>
-            </div>
-            <div class="nav-item">
-                <a href="#" class="deploy-nav-sub-item">
-                    <i class="nav-icon fa fa-files-o"></i>
-                    Il Mese adatto
-                </a>
-            </div>
-            <div class="nav-item">
-                <a href="#" class="deploy-nav-sub-item">
-                    <i class="nav-icon fa fa-files-o"></i>
-                    Il colore del vestito
-                </a>
-            </div>
-            <div class="nav-item">
-                <a href="#" class="deploy-nav-sub-item">
+                <a href="fedi.html" class="deploy-nav-sub-item">
                     <i class="nav-icon fa fa-files-o"></i>
                     Le fedi
                 </a>
             </div>
             <div class="nav-item">
-                <a href="#" class="deploy-nav-sub-item">
-                    <i class="nav-icon fa fa-files-o"></i>
-                    La bomboniera
-                </a>
-            </div>
-            <div class="nav-item">
-                <a href="#" class="deploy-nav-sub-item">
+                <a href="confetti.html" class="deploy-nav-sub-item">
                     <i class="nav-icon fa fa-files-o"></i>
                     I Confetti
                 </a>
             </div>
             <div class="nav-item">
-                <a href="#" class="deploy-nav-sub-item">
+                <a href="giarrettiera.html" class="deploy-nav-sub-item">
+                    <i class="nav-icon fa fa-camera"></i>
+                    La Giarrettiera
+                </a>
+            </div>			
+            <div class="nav-item">
+                <a href="bomboniera.html" class="deploy-nav-sub-item">
+                    <i class="nav-icon fa fa-files-o"></i>
+                    La bomboniera
+                </a>
+            </div>
+            <div class="nav-item">
+                <a href="matrimonio_prima.html" class="deploy-nav-sub-item">
+                    <i class="nav-icon fa fa-picture-o"></i>
+                    Prima del Matrimonio
+                </a>
+            </div>
+            <div class="nav-item">
+                <a href="matrimonio_dopo.html" class="deploy-nav-sub-item">
+                    <i class="nav-icon fa fa-files-o"></i>
+                    Dopo la Cerimonia
+                </a>
+            </div>
+            <div class="nav-item">
+                <a href="giorno.html" class="deploy-nav-sub-item">
+                    <i class="nav-icon fa fa-files-o"></i>
+                    Il Giorno adatto
+                </a>
+            </div>
+            <div class="nav-item">
+                <a href="mese.html" class="deploy-nav-sub-item">
+                    <i class="nav-icon fa fa-files-o"></i>
+                    Il Mese adatto
+                </a>
+            </div>
+            <div class="nav-item">
+                <a href="colore.html" class="deploy-nav-sub-item">
+                    <i class="nav-icon fa fa-files-o"></i>
+                    Il colore del vestito
+                </a>
+            </div>
+            <div class="nav-item">
+                <a href="anniversari.html" class="deploy-nav-sub-item">
                     <i class="nav-icon fa fa-files-o"></i>
                     Gli anniversari
                 </a>
             </div>
             <div class="nav-item">
-                <a href="contact.html">
+                <a href="contattaci.html">
                     <i class="nav-icon fa fa-envelope"></i>
                     Contattaci
                 </a>
@@ -144,24 +144,24 @@
                     <div>
                         <div class="overlay"></div>
                         <div class="homepage-slider-caption">
-                            <h3>Swipe me!</h3>
-                            <p>Hope you enjoy our latest item!</p>
+                            <h3>I Confetti</h3>
+                            <p>La storia e le tradizioni legate ad esso!</p>
                         </div>
                         <img src="images/pictures/3ww.jpg" class="responsive-image" alt="img">
                     </div>
                     <div>
                         <div class="overlay"></div>
                         <div class="homepage-slider-caption">
-                            <h3>Slider</h3>
-                            <p>Our slider is awesome!</p>
+                            <h3>Il Bouquet</h3>
+                            <p>Lo sapevate che è un omaggio?</p>
                         </div>
                         <img src="images/pictures/5ww.jpg" class="responsive-image" alt="img">
                     </div>
                     <div>
                         <div class="overlay"></div>
                         <div class="homepage-slider-caption">
-                            <h3>Responsive</h3>
-                            <p>And it's fully responsive!</p>
+                            <h3>Il Colore del vestito</h3>
+                            <p>Lo sapevi che...</p>
                         </div>
                         <img src="images/pictures/6ww.jpg" class="responsive-image" alt="img">
                     </div>
@@ -172,14 +172,14 @@
                     <p>
 					Benvenuto nella nostra nuova App! Ovunque in Italia sono tantissime le usanze legate a questo giorno, quelle che caratterizzano ogni matrimonio e che ogni sposa cerca di rispettare sono quelle che portano bene...
                     </p>
-                    <a href="#">@envato_market</a>
+                    <a href="#">#matrimonioapp</a>
                 </div>    
                 <div class="decoration"></div>        
             </div>
             <div class="content-strip">
                 <h4>I 5 punti fondamentali</h4>
                 <p>Le 5 cose che portano bene e che la sposa deve indossare quel giorno!</p>
-                <i class="fa fa-cogs"></i>
+                <!--<i class="fa fa-cogs"></i>-->
                 <div class="overlay"></div>
                 <img src="images/pictures/5w.jpg" alt="img">
             </div>
@@ -225,7 +225,7 @@
                     <div class="decoration hide-if-responsive"></div>
                     <div class="one-half-responsive">
                         <p class="thumb-left no-bottom">
-                            <img src="images/pictures/3s.jpg" alt="img">
+                            <img src="images/pictures/5s.jpg" alt="img">
                             <strong>Una cosa blu</strong>
                             <em><br>Simbolo di sincerità e purezza da parte della sposa ,anticamente era il colore dell' abito della sposa. Oggi molto usata è la giarrettiera decorata con un nastrino blu.  </em>
                         </p>
@@ -236,7 +236,7 @@
             <div class="content-strip">
                 <h4>Naviga tra le categorie</h4>
                 <p>Apri il menu e sfoglia tra tutte le curiosità</p>
-                <i class="fa fa-star-o"></i>
+                <!--<i class="fa fa-star-o"></i>-->
                 <div class="overlay"></div>
                 <img src="images/pictures/7w.jpg" alt="img">
             </div>
